--- a/package.json
+++ b/package.json
@@ -1,16 +1,26 @@
 {
-  "name": "three-day-planner",
+  "name": "todo",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://mohit0101.github.io/next-3-days-plan-browser-homepage",
   "dependencies": {
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
-    "react-scripts": "1.1.5"
+    "hack": "^0.8.1",
+    "ontime": "0.0.5",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "react-scripts": "1.1.4",
+    "react-simple-storage": "^1.2.2",
+    "url-parse": "^1.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.2.0"
   }
 }
